[gd_scene load_steps=11 format=3 uid="uid://dvloo1x4hh5un"]

[ext_resource type="Script" uid="uid://b7vkg4hrjyuh5" path="res://Scripts/blink_tile.gd" id="1_icddg"]
[ext_resource type="Texture2D" uid="uid://u5o5qeryt2xp" path="res://Assets/Sprites/world_tileset.png" id="1_mhjcm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_icddg"]
size = Vector2(14, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2p58k"]
size = Vector2(16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_icddg"]
atlas = ExtResource("1_mhjcm")
region = Rect2(96, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2p58k"]
atlas = ExtResource("1_mhjcm")
region = Rect2(176, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_86fr3"]
atlas = ExtResource("1_mhjcm")
region = Rect2(96, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibc3v"]
atlas = ExtResource("1_mhjcm")
region = Rect2(192, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4561"]
atlas = ExtResource("1_mhjcm")
region = Rect2(96, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_86fr3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_icddg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2p58k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86fr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibc3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4561")
}],
"loop": false,
"name": &"Blink",
"speed": 15.0
}]

[node name="BlinkTile" type="StaticBody2D"]
script = ExtResource("1_icddg")

[node name="Area2D" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -9.145)
shape = SubResource("RectangleShape2D_icddg")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_mhjcm")
region_enabled = true
region_rect = Rect2(96, 16, 16, 16)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TileShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_2p58k")

[node name="TileAN" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_86fr3")
animation = &"Blink"
frame_progress = 1.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
